--- a/.gitmodules
+++ b/.gitmodules
@@ -163,3 +163,6 @@
 [submodule "generators/radiance"]
 	path = generators/radiance
 	url = https://github.com/ucb-bar/radiance.git
+[submodule "generators/msaga"]
+	path = generators/msaga
+	url = git@github.com:VCA-EPFL/MSAGA.git
